--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -7,6 +7,7 @@
     // background-color: var.$gray;
     @include mix.media(position, $md: sticky);
     @include mix.media(top, $md: 0);
+    z-index: $zindex-sticky;
 
     .container {
         // all
